welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:16: error: illegal start of simple expression
	)
        ^ColumnByColumn:18: error: ')' expected but '}' found.
}
^